# yd_gui

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  compose.yml
.github/workflows/: tests.yml
assets/: appico.icns
cmake/: SetupDependencies.cmake  SetupInstall.cmake  add_shortcut.qs  controller.qs
docker/: linux.Dockerfile
docs/: replacing_qt_lgpl3_modules.txt
docs/diagrams/: Class Diagram.drawio  Features Mindmap.md  GUI Description.md
qml/: CMakeLists.txt  Main.qml
qml/TestModule/: Test.qml
qml/yd_gui/: CMakeLists.txt
qml/yd_gui/ExampleModule/: CMakeLists.txt
src/: CMakeLists.txt  Main.qml  application.cpp  application.h  application_settings.cpp  application_settings.h  database.cpp  database.h  downloader.cpp  downloader.h  main.cpp  video.cpp  video.h  video_list_model.cpp  video_list_model.h  video_list_model_sorted_proxy.cpp  video_list_model_sorted_proxy.h
src/qml/: ClearHistoryDialog.qml  Console.qml  Constants.qml  DownloadButton.qml  DropShadow.qml  FormatComboBox.qml  FormatDelegate.qml  Header.qml  InputDownloadDir.qml  InputFfmpeg.qml  InputUrl.qml  InputYtdlp.qml  LicenseDialog.qml  LinkText.qml  ProgressBar.qml  RaisedButton.qml  RemoveButton.qml  SettingsContent.qml  SettingsDrawer.qml  TestDel.qml  TextTrailingIcon.qml  Theme.qml  ThemeDelegate.qml  ThemePicker.qml  TitleAudioText.qml  VideoDelegate.qml  VideosListContent.qml
tests/: CMakeLists.txt  _tst_util.cpp  _tst_util.h  downloader.test.cpp  tst_database.cpp  tst_downloader.cpp  tst_main.cpp  tst_qml.cpp  tst_video_list_model.cpp
tests/data/: cks_fmt.json  cks_fmt_missing_id,title.json  cks_fmt_missing_id.json  cks_just_acodecs.json  cks_just_formats.json  cks_just_formats_empty.json  cks_missing_formats.json  jm_fmt.json  jm_unfmt.json  jm_unfmt_malformed.json  zoo_fmt.json
tests/qml/: tst_example.qml
